--- a/book_libaray.css
+++ b/book_libaray.css
@@ -3,15 +3,17 @@
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
     align-items: center;
+    gap: 10px;
 }
 
 .book-card{
-    min-width: 125px;
-    min-height: 200px;
+    min-width: 80%;
+    min-height: 100%;
     background-color: rgba(0, 255, 255, 0.493);
     display:flex;
     flex-wrap:wrap;
     justify-content: center;
     flex-direction: column;
+    text-align: center;
 
 }
