--- a/book_libaray.css
+++ b/book_libaray.css
@@ -17,3 +17,13 @@
     text-align: center;
 
 }
+
+.book-form{
+    float:left;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    max-width:20%;
+}
